--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "web-design-resources",
-  "homepage": "https://github.com/dhri-yama/lighthouse",
+  "homepage": "https://dhri-yama.github.io/lighthouse/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^3.1.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
+    "gh-pages": "^3.1.0",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.3"
   }
